--- a/src/index.html
+++ b/src/index.html
@@ -858,6 +858,6 @@
         </div>
       </div>
     </footer>
-    <script src="/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
