--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
             <span class="btn__circle">
               <span class="btn__arrow" width="10" height="10">
                 <svg class="btn__svg btn__svg--first" width="10" height="10">
-                  <use href="./images/symbol-defs.svg#icon-arrow"></use>
+                  <use href="./src/images/symbol-defs.svg#icon-arrow"></use>
                 </svg>
                 <svg class="btn__svg btn__svg--second" width="10" height="10">
                   <use href="./src/images/symbol-defs.svg#icon-arrow"></use>
